ZCS-11367: adding java options for JDK 17 performance tunning